@@ -1,5 +1,16 @@
 2006-04-10  Bruno Haible  <bruno@clisp.org>
 
+	Implement feature request #[ 1415783 ].
+	* clos-genfun3.lisp (make-generic-function): Add method-combination-p
+	argument. If false, move the :method-combination keyword argument to
+	the end.
+	(analyze-defgeneric): Return method-combination-p as 5th value.
+	(defgeneric): When :method-combination was not specified, move the
+	:method-combination keyword argument to the end.
+	(make-generic-function-form): Update.
+
+2006-04-10  Bruno Haible  <bruno@clisp.org>
+
 	Complete Sam's 2005-11-21 patch.
 	* clos-class3.lisp (defclass): Verify that a slot's :ALLOCATION value
 	is a symbol. Don't treat the symbol NIL specially.
